Fixed issue where sidebar elements weren't being given the active class when specified

--- a/public/long-form.html
+++ b/public/long-form.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide – Example of a long form advice content page</title>
+    <title>Citizens Advice style guide – Long form advice content page</title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
@@ -50,7 +50,7 @@
       <div class="main-content">
         <main id="main" role="main" class="main-content__right">
           <div class="title">
-            <h1 class="title__heading js-ref"><span class="title__title">Example of a long form advice content page</span></h1>
+            <h1 class="title__heading js-ref"><span class="title__title">Long form advice content page</span></h1>
           </div>
           <div class="title__subheading">This advice is for <a id="showSimpleModal" class="btn btn-primary-outline btn-small">England</a><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a><span class="info-extent">Extent</span><span class="info-reviewed">Reviewed</span><span class="info-owner">EWNIS</span></div>
           <div class="articleContent">
@@ -121,12 +121,13 @@
           </div>
         </main>
         <nav class="side-nav-beta">
+          <!-- Set the number at the end to the array position of the active page-->
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 1">Sibling page 1</a>
+              <li class="side-nav-beta__sibling"><a href="long-form.html" title="Sibling page 1" class="-current">Sibling page 1</a>
               </li>
-              <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 2">Sibling page 2</a>
+              <li class="side-nav-beta__sibling"><a href="index.html" title="Sibling page 2">Sibling page 2</a>
               </li>
             </ul>
           </ul>
