Moved advisor and callout over to jade

--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@
         </div>
       </div>
     </footer>
+    <script src="../libs/javascript/advisor.js"></script>
     <script src="../libs/javascript/core.js"></script>
   </body>
 </html>
