--- a/public/long-form.html
+++ b/public/long-form.html
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Layout</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Long form</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -120,8 +120,8 @@
             </div>
           </div>
         </main>
+        <!-- Set the number at the end to the array position of the active page-->
         <nav class="side-nav-beta">
-          <!-- Set the number at the end to the array position of the active page-->
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
@@ -146,6 +146,7 @@
         </div>
       </div>
     </footer>
+    <script src="../libs/javascript/advisor.js"></script>
     <script src="../libs/javascript/core.js"></script>
   </body>
 </html>
