--- a/public/layout.html
+++ b/public/layout.html
@@ -145,6 +145,7 @@
         </div>
       </div>
     </footer>
+    <script src="../libs/javascript/advisor.js"></script>
     <script src="../libs/javascript/core.js"></script>
   </body>
 </html>
