Moved the subtitle into a template file, as it is a repeatable element

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
                   <ul>
                     <li><a href="long-form.html">Long form content</a></li>
                     <li><a href="toolbar.html">Content toolbar</a></li>
+                    <li><a href="advisor.html">Advisor content</a></li>
                   </ul>
                 </li>
                 <li><a href="tables.html">Tables</a></li>
