--- a/public/long-form.html
+++ b/public/long-form.html
@@ -27,10 +27,8 @@
     <div class="skip-nav"><a class="screenreader screenreader--focusable">Skip to content</a><a class="screenreader screenreader--focusable">Skip to footer</a></div>
     <div class="cookie-monster hide-no-cookies hide-no-js no-print">
       <div class="cookie-monster__content">
-        <div>
-          <p>This site uses cookies.&nbsp; Find out more about <a href="#">our use of cookies</a>.</p>
-        </div>
-        <button data-action="close" type="button" class="button--blue cookie-monster__close"><i class="icon-cross"></i>Close</button>
+        <p>This site uses cookies. Find out more about <a href="#">our use of cookies</a>.</p>
+        <button data-action="close" type="button" class="btn cookie-monster__close">Close</button>
       </div>
     </div>
     <header class="main-header">
