Improved syntax around heading variable in template

--- a/public/extent.html
+++ b/public/extent.html
@@ -6,7 +6,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide – Extent switcher</title>
+    <title>Citizens Advice style guide - Extent switcher
+    </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
