--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide – Citizens Advice elements guide</title>
+    <title>Citizens Advice style guide 
+    </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
     <meta content="48a2415d-980f-4763-a5b9-e10e000636b3" name="cab-guid">
@@ -47,7 +48,7 @@
       </aside>
       <div class="main-content">
         <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Citizens Advice elements guide</span></h1>
+          <h1 class="title__heading js-ref"><span class="title__title"></span></h1>
         </div>
         <div class="articleContent">
           <p class="p-lede">This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.</p>
