--- a/public/index.html
+++ b/public/index.html
@@ -55,17 +55,19 @@
           <div class="flex-container">
             <div class="flex-col-1-1">
               <h2>Contents</h2>
+              <h3>Layout</h3>
               <ul>
-                <li><a href="layout.html">Layout</a></li>
-                <li style="list-style: none; display: inline">
-                  <ul>
-                    <li><a href="long-form.html">Long form content</a></li>
-                    <li><a href="toolbar.html">Content toolbar</a></li>
-                    <li><a href="advisor.html">Advisor content</a></li>
-                  </ul>
-                </li>
+                <li><a href="layout.html">Grid layout</a></li>
+                <li><a href="long-form.html">Long form content</a></li>
+                <li><a href="toolbar.html">Content toolbar</a></li>
+                <li><a href="advisor.html">Advisor content</a></li>
+              </ul>
+              <h3>Website elements</h3>
+              <ul>
                 <li><a href="tables.html">Tables</a></li>
-                <li>Modals</li>
+                <li> 
+                  <h4>Modals</h4>
+                </li>
                 <li style="list-style: none; display: inline">
                   <ul>
                     <li><a href="extent.html">Extent Switcher</a></li>
