--- a/public/index.html
+++ b/public/index.html
@@ -52,16 +52,19 @@
         </div>
         <div class="articleContent">
           <p class="p-lede">This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.</p>
+          <h2>Contents</h2>
           <div class="flex-container">
-            <div class="flex-col-1-1">
-              <h2>Contents</h2>
+            <div class="flex-col-1-3">
               <h3>Layout</h3>
               <ul>
                 <li><a href="layout.html">Grid layout</a></li>
+                <li><a href="new-grid.html">New grid layout</a></li>
                 <li><a href="long-form.html">Long form content</a></li>
                 <li><a href="toolbar.html">Content toolbar</a></li>
                 <li><a href="advisor.html">Advisor content</a></li>
               </ul>
+            </div>
+            <div class="flex-col-1-3">
               <h3>Website elements</h3>
               <ul>
                 <li><a href="tables.html">Tables</a></li>
