--- a/public/long-form.html
+++ b/public/long-form.html
@@ -37,7 +37,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Long form</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Layout">Layout</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Long form content</span>
         </div>
       </nav>
       <aside class="section-notice">
