--- a/public/new-grid.html
+++ b/public/new-grid.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Grid layout
+    <title>Citizens Advice style guide - New grid layout
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -37,7 +37,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Layout">Layout</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Grid layout</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Layout">Layout</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">New grid layout</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -48,85 +48,99 @@
       </aside>
       <div class="main-content">
         <div class="title">
-          <h1 class="title__heading js-ref"><span class="title__title">Grid layout</span></h1>
+          <h1 class="title__heading js-ref"><span class="title__title">New grid layout</span></h1>
         </div>
         <div class="articleContent">
-          <div class="flex-container">
-            <div class="col-md-8">
-              <p>The default page width is 1080px with a 12-column grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
-              <p>The layout for pages should be 12 columns (full width), 3 or 4 column, other variations can be used if needed.</p>
+          <div class="row">
+            <div class="span12">
+              <p>The default page width is 1080px with a 12-spanumn grid. It is recommended for most content to use the two-thirds (content first) layout. This restricts line length to a more managable size and encourages a better reading pattern, <a href="#">improving cognition</a>.</p>
+              <p>The layout for pages should be 12 spanumns (full width), 3 or 4 spanumn, other variations can be used if needed.</p>
             </div>
           </div>
-          <div class="flex-container">
-            <div class="flex-col-1-1">
+          <div class="row">
+            <div class="span12">
               <h3>Two Thirds (content first)</h3>
             </div>
-            <div class="flex-col-2-3">
-              <div class="example-box">2/3<code>flex-col-2-3</code></div>
+            <div class="span8">
+              <div class="example-box">2/3<code>span8</code></div>
             </div>
-            <div class="flex-col-1-3">
-              <div class="example-box">1/3<code>flex-col-1-3</code></div>
+            <div class="span4">
+              <div class="example-box">1/3<code>span4</code></div>
             </div>
           </div>
-          <div class="flex-container">
-            <div class="flex-col-1-1">
+          <div class="row">
+            <div class="span12">
               <h3>Two Thirds (navigation first)</h3>
             </div>
-            <div class="flex-col-1-3">
-              <div class="example-box">1/3<code>flex-col-1-3</code></div>
+            <div class="span4">
+              <div class="example-box">1/3<code>span4</code></div>
             </div>
-            <div class="flex-col-2-3">
-              <div class="example-box">2/3<code>flex-col-2-3</code></div>
+            <div class="span8">
+              <div class="example-box">2/3<code>span8</code></div>
             </div>
           </div>
-          <div class="flex-container">
-            <div class="flex-col-1-1">
+          <div class="row">
+            <div class="span12">
               <h3>One Quarter</h3>
             </div>
-            <div class="flex-col-1-4">
-              <div class="example-box">1/4<code>flex-col-1-4</code></div>
+            <div class="span3">
+              <div class="example-box">1/4<code>span3</code></div>
             </div>
-            <div class="flex-col-3-4">
-              <div class="example-box">3/4<code>flex-col-3-4</code></div>
+            <div class="span9">
+              <div class="example-box">3/4<code>span9</code></div>
             </div>
           </div>
-          <div class="flex-container">
-            <div class="flex-col-1-1">
+          <div class="row">
+            <div class="span12">
               <h3>Full Width</h3>
             </div>
-            <div class="flex-col-1-1">
-              <div class="example-box">1/1<code>flex-col-1-1</code></div>
+            <div class="span12">
+              <div class="example-box">1/1<code>span12</code></div>
             </div>
           </div>
-          <div class="flex-container">
-            <div class="flex-col-1-1">
+          <div class="row">
+            <div class="span12">
               <h3>Thirds</h3>
             </div>
-            <div class="flex-col-1-3">
-              <div class="example-box">1/3<code>flex-col-1-3</code></div>
+            <div class="span4">
+              <div class="example-box">1/3<code>span4</code></div>
             </div>
-            <div class="flex-col-1-3">
-              <div class="example-box">1/3<code>flex-col-1-3</code></div>
+            <div class="span4">
+              <div class="example-box">1/3<code>span4</code></div>
             </div>
-            <div class="flex-col-1-3">
-              <div class="example-box">1/3<code>flex-col-1-3</code></div>
+            <div class="span4">
+              <div class="example-box">1/3<code>span4</code></div>
             </div>
           </div>
-          <div class="flex-container">
-            <div class="flex-col-1-1">
+          <div class="row">
+            <div class="span12">
               <h3>Quarters</h3>
             </div>
-            <div class="flex-col-1-4">
-              <div class="example-box">1/4<code>flex-col-1-4</code></div>
+            <div class="span3">
+              <div class="example-box">1/4<code>span3</code></div>
             </div>
-            <div class="flex-col-1-4">
-              <div class="example-box">1/4<code>flex-col-1-4</code></div>
+            <div class="span3">
+              <div class="example-box">1/4<code>span3</code></div>
             </div>
-            <div class="flex-col-1-4">
-              <div class="example-box">1/4<code>flex-col-1-4</code></div>
+            <div class="span3">
+              <div class="example-box">1/4<code>span3</code></div>
             </div>
-            <div class="flex-col-1-4">
-              <div class="example-box">1/4<code>flex-col-1-4</code></div>
+            <div class="span3">
+              <div class="example-box">1/4<code>span3</code></div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="span12"> 
+              <h3>Flexible (defined with mixin in LESS)</h3>
+            </div>
+            <div class="customcol49">
+              <div class="example-box">4/9<code>.col(4,9);</code></div>
+            </div>
+            <div class="customcol13">
+              <div class="example-box">3/9<code>.col(1,3);</code></div>
+            </div>
+            <div class="customcol29">
+              <div class="example-box">2/9<code>.col(2,9);</code></div>
             </div>
           </div>
         </div>
