Rearranging the index page

--- a/public/index.html
+++ b/public/index.html
@@ -55,17 +55,31 @@
           <h2>Contents</h2>
           <div class="flex-container">
             <div class="flex-col-1-3">
+              <h3>Styles</h3>
+              <ul>
+                <li><a href="typography.html">Typography</a></li>
+                <li><a href="colours.html">Colours</a></li>
+              </ul>
+            </div>
+            <div class="flex-col-1-3">
               <h3>Layout</h3>
               <ul>
-                <li><a href="layout.html">Grid layout</a></li>
-                <li><a href="new-grid.html">New grid layout</a></li>
+                <li> 
+                  <h4>Grid</h4>
+                </li>
+                <li style="list-style: none; display: inline">
+                  <ul>
+                    <li><a href="layout.html">Grid layout</a></li>
+                    <li><a href="new-grid.html">New grid layout</a></li>
+                  </ul>
+                </li>
                 <li><a href="long-form.html">Long form content</a></li>
                 <li><a href="toolbar.html">Content toolbar</a></li>
                 <li><a href="advisor.html">Advisor content</a></li>
               </ul>
             </div>
             <div class="flex-col-1-3">
-              <h3>Website elements</h3>
+              <h3>Elements</h3>
               <ul>
                 <li><a href="tables.html">Tables</a></li>
                 <li> 
@@ -78,8 +92,6 @@
                     <li><a href="reference.html">Reference tool</a></li>
                   </ul>
                 </li>
-                <li><a href="typography.html">Typography</a></li>
-                <li><a href="colours.html">Colours</a></li>
                 <li><a href="callout.html">Callout</a></li>
                 <li><a href="collapse.html">Collapse</a></li>
                 <li><a href="forms.html">Forms</a></li>
