--- a/public/tables.html
+++ b/public/tables.html
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Website elements">Website elements</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Tables</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#atoms" title="Atoms">Atoms</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Tables</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -51,42 +51,39 @@
         <div class="title">
           <h1 class="title__heading js-ref"><span class="title__title">Tables</span></h1>
         </div>
-        <div class="articleContent">
-          <p class="p-lede">Tables</p>
-          <div class="flex-container">
-            <div class="flex-col-2-3">
-              <table style="width:100%">
-                <thead>
-                  <tr>
-                    <th scope="col">th</th>
-                    <th scope="col">th</th>
-                    <th scope="col">th</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>td</td>
-                    <td>td</td>
-                    <td>td</td>
-                  </tr>
-                  <tr>
-                    <td>td</td>
-                    <td>td</td>
-                    <td>td</td>
-                  </tr>
-                  <tr>
-                    <td>td</td>
-                    <td>td</td>
-                    <td>td</td>
-                  </tr>
-                  <tr>
-                    <td>td</td>
-                    <td>td</td>
-                    <td>td</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
+        <div class="articleContent row">
+          <div class="span8">
+            <table style="width:100%">
+              <thead>
+                <tr>
+                  <th scope="col">th</th>
+                  <th scope="col">th</th>
+                  <th scope="col">th</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>td</td>
+                  <td>td</td>
+                  <td>td</td>
+                </tr>
+                <tr>
+                  <td>td</td>
+                  <td>td</td>
+                  <td>td</td>
+                </tr>
+                <tr>
+                  <td>td</td>
+                  <td>td</td>
+                  <td>td</td>
+                </tr>
+                <tr>
+                  <td>td</td>
+                  <td>td</td>
+                  <td>td</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
         <section class="print-only">
