--- a/public/grid.html
+++ b/public/grid.html
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Layout">Layout</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Grid layout</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#atoms" title="Atoms">Atoms</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#grid" title="Grid">Grid</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Grid layout</span>
         </div>
       </nav>
       <aside class="section-notice">
