Small fix for brand callouts

--- a/public/callout.html
+++ b/public/callout.html
@@ -176,34 +176,42 @@
             <div class="example-box-plain">
               <div class="callout--heritage">
                 <h3>Callout heritage</h3>
+                <p>Lorem ipsum.</p>
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--heritage"&gt;
 	&lt;h3&gt;Callout heritage&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--responsible">
                 <h3>Callout responsible</h3>
+                <p>Lorem ipsum.</p>
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--responsible"&gt;
 	&lt;h3&gt;Callout responsible&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--inventive">
                 <h3>Callout inventive</h3>
+                <p>Lorem ipsum.</p>
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--inventive"&gt;
 	&lt;h3&gt;Callout inventive&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 &lt;/div&gt;</code></pre>
             <div class="example-box-plain">
               <div class="callout--generous">
                 <h3>Callout generous</h3>
+                <p>Lorem ipsum.</p>
               </div>
             </div>
             <pre><code class="language-html">&lt;div class="callout--generous"&gt;
 	&lt;h3&gt;Callout generous&lt;/h3&gt;
+	&lt;p&gt;Lorem ipsum.&lt;/p&gt;
 &lt;/div&gt;</code></pre>
           </div>
         </div>
