Linked to principles in index

--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
             <div class="span12">
               <h2 id="principles">Design principles</h2>
               <ul>
-                <li><a href="#">Design principles</a></li>
+                <li><a href="principles.html">Design principles</a></li>
               </ul>
             </div>
           </div>
