Created template/sharebar.jade and set it up as a variable in the template, updating the pages that used it

--- a/public/extent.html
+++ b/public/extent.html
@@ -101,7 +101,7 @@
             });
           </script>
           <div class="title__subheading--footer">
-            <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter"><span>Twitter</span></a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook"><span>Facebook</span></a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus"><span>Google Plus</span></a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp"><span>Whatsapp</span></a>
+            <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook">Facebook</a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus">Google Plus</a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp">Whatsapp</a>
           </div>
         </main>
         <!-- Set the number at the end to the array position of the active page-->
@@ -109,9 +109,9 @@
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="long-form.html" title="Sibling page 1" class="-current">Sibling page 1</a>
+              <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 1" class="-current">Sibling page 1</a>
               </li>
-              <li class="side-nav-beta__sibling"><a href="index.html" title="Sibling page 2">Sibling page 2</a>
+              <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 2">Sibling page 2</a>
               </li>
             </ul>
           </ul>
