--- a/public/advisor.html
+++ b/public/advisor.html
@@ -38,7 +38,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="#" title="Layout">Layout</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Advisor content</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Advisor content</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -122,7 +122,7 @@
             </div>
           </div>
           <div class="title__subheading--footer">
-            <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter"><span>Twitter</span></a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook"><span>Facebook</span></a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus"><span>Google Plus</span></a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp"><span>Whatsapp</span></a>
+            <p>Share this page</p><a href="https://twitter.com/share?url=" data-track="Twitter" rel="external" class="a-social-twitter">Twitter</a><a href="https://www.facebook.com/sharer/sharer.php?u=" data-track="Facebook" rel="external" class="a-social-facebook">Facebook</a><a href="https://plus.google.com/share?url=" data-track="Google+" rel="external" class="a-social-google-plus">Google Plus</a><a href="whatsapp://send" data-text="share?url=" data-track="whatsapp" rel="external" class="a-social-whatsapp">Whatsapp</a>
           </div>
         </main>
         <!-- Set the number at the end to the array position of the active page-->
@@ -130,9 +130,9 @@
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="long-form.html" title="Sibling page 1" class="-current">Sibling page 1</a>
+              <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 1" class="-current">Sibling page 1</a>
               </li>
-              <li class="side-nav-beta__sibling"><a href="index.html" title="Sibling page 2">Sibling page 2</a>
+              <li class="side-nav-beta__sibling"><a href="#" title="Sibling page 2">Sibling page 2</a>
               </li>
             </ul>
           </ul>
