Fixed lede text

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,11 @@
           <h1 class="title__heading js-ref"><span class="title__title"></span></h1>
         </div>
         <div class="articleContent">
-          <p class="p-lede">This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.</p>
+          <div class="row">
+            <div class="span8">
+              <p class="u-lede">This is a guide to demonstrate elements such as layout, typography, forms, buttons and icons.</p>
+            </div>
+          </div>
           <div class="row">
             <div class="span12">
               <h2 id="principles">Design principles</h2>
