Removed section noticed from jade template, replaced with 'block section-notice'

--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,6 @@
         <div class="main-breadcrumb__content"><span class="breadcrumb__item">Home</span>
         </div>
       </nav>
-      <aside class="section-notice">
-        <h2 class="screenreader">Notice</h2>
-        <div class="section-notice__content">
-          <p><span class="badge">NEW</span>&nbsp;This page is part of <a href="#">our new approach to digital advice</a>.</p>
-        </div>
-      </aside>
       <div class="main-content">
         <div class="title">
           <h1 class="title__heading js-ref"><span class="title__title"></span></h1>
@@ -93,6 +87,7 @@
               <ul>
                 <li><a href="callout.html">Callout</a></li>
                 <li><a href="collapse.html">Collapse</a></li>
+                <li><a href="section-notice.html">Section Notices</a></li>
               </ul>
             </div>
             <div class="span3">
