--- a/public/index.html
+++ b/public/index.html
@@ -88,6 +88,7 @@
               <h2 id="organisms">Organisms</h2>
               <ul>
                 <li><a href="toolbar.html">Content toolbar</a></li>
+                <li><a href="cookie-monster.html">Cookie Monster</a></li>
                 <li> 
                   <h4 id="modals">Modals</h4>
                   <ul>
