--- a/public/cookie-monster.html
+++ b/public/cookie-monster.html
@@ -34,7 +34,7 @@
       </div>
     </div>
     <header class="main-header">
-      <div class="main-header__content main-content"><a href="" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&amp;#39;/Static/images/logos/ca-logo_100px.svg.png&amp;#39;;" src="assets/images/ca-logo_100px.svg"></a><img src="assets/images/ca-logo-hz-280px.svg" class="print-only logo"></div>
+      <div class="main-header__content main-content"><a href="index.html" title="Citizens Advice home" class="main-header__logo no-print"><img alt="Citizens Advice" onerror="this.onerror=null;this.src=&amp;#39;/Static/images/logos/ca-logo_100px.svg.png&amp;#39;;" src="assets/images/ca-logo_100px.svg"></a><img src="assets/images/ca-logo-hz-280px.svg" class="print-only logo"></div>
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
