Created section-index.jade to reaplce consumer-index.html

--- a/public/index.html
+++ b/public/index.html
@@ -103,7 +103,9 @@
               <h2 id="templates">Templates</h2>
               <ul>
                 <li><a href="long-form.html">Long form content</a></li>
-                <li><a href="advisor.html">Advisor content</a></li>
+                <!--li-->
+                <!--	a(href="advisor.html") Advisor content-->
+                <li><a href="section-index.html">Section index</a></li>
               </ul>
             </div>
           </div>
