Small fixes for gh-pages

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
                   <h4 id="forms">Forms</h4>
                   <ul>
                     <li><a href="buttons.html">Buttons</a></li>
-                    <li><a href="Fields.html">Fields</a></li>
+                    <li><a href="fields.html">Fields</a></li>
                   </ul>
                 </li>
                 <li> 
