--- a/public/colours.html
+++ b/public/colours.html
@@ -64,6 +64,8 @@
               <div class="span3 swatch swatch--brand--responsible-aqua">
                 <p>Responsible Aqua<br>@responsible-aqua<br>#90CE9C</p>
               </div>
+            </div>
+            <div class="row">
               <div class="span3 swatch swatch--brand--inventive-teal">
                 <p>Inventive Teal<br>@inventive-teal<br>#006278</p>
               </div>
@@ -116,6 +118,8 @@
               <div class="span3 swatch swatch--beta--yellow">
                 <p>Yellow<br>@yellow<br>#FFBF47</p>
               </div>
+            </div>
+            <div class="row">
               <div class="span3 swatch swatch--beta--green">
                 <p>Green<br>@green<br>#537D2D</p>
               </div>
@@ -145,6 +149,8 @@
               <div class="span3 swatch swatch--beta--orange-lighter">
                 <p>Orange Lighter<br>@orange-lighter<br>#FBCAB1</p>
               </div>
+            </div>
+            <div class="row">
               <div class="span3 swatch swatch--beta--green-light">
                 <p>Green Light<br>@green-light<br>#B9DB9B</p>
               </div>
@@ -160,6 +166,8 @@
               <div class="span3 swatch swatch--beta--blue-darker">
                 <p>Blue Darker<br>@blue-darker<br>#002D4A</p>
               </div>
+            </div>
+            <div class="row">
               <div class="span3 swatch swatch--beta--aqua-light">
                 <p>Aqua Light<br>@aqua-light<br>#B8E3DF</p>
               </div>
@@ -189,6 +197,8 @@
               <div class="span3 swatch swatch--mono--gray3">
                 <p>Gray 3<br>@gray-3<br>#808080</p>
               </div>
+            </div>
+            <div class="row">
               <div class="span3 swatch swatch--mono--gray4">
                 <p>Gray 4<br>@gray-4<br>#9F9F9F</p>
               </div>
@@ -201,6 +211,8 @@
               <div class="span3 swatch swatch--mono--gray7">
                 <p>Gray 7<br>@gray-7<br>#EEEEEE</p>
               </div>
+            </div>
+            <div class="row">
               <div class="span3 swatch swatch--mono--gray8">
                 <p>Gray 8<br>@gray-8<br>#F2F2F2</p>
               </div>
