Created mockup of adviser content, popup and pages

--- a/public/adviser-2.html
+++ b/public/adviser-2.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta name="keywords">
     <meta name="description">
-    <title>Citizens Advice style guide - Content heading
+    <title>Citizens Advice style guide - Legislation
     </title>
     <!-- Mobile Specific Metas-->
     <meta content="width=device-width, initial-scale=1, maximum-scale=2.0" name="viewport">
@@ -32,7 +32,7 @@
     </header>
     <div class="main-container">
       <nav class="main-breadcrumb">
-        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Adviser content</span>
+        <div class="main-breadcrumb__content"><span class="breadcrumb__item"><a href="index.html" title="Home">Home</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="index.html#templates" title="Templates">Templates</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item"><a href="adviser.html" title="Adviser content">Adviser content</a><i class="icon-guillemet-right"></i></span><span class="breadcrumb__item">Adviser content – Legislation</span>
         </div>
       </nav>
       <aside class="section-notice">
@@ -41,10 +41,16 @@
           <p><span class="badge">NEW</span>This page is part of <a href="#">our new approach to digital advice</a>.</p>
         </div>
       </aside>
+      <aside class="section-notice__adviser">
+        <h2 class="screenreader">Notice</h2>
+        <div class="section-notice__content">
+          <p><span class="badge">ADVISER</span>This page is part of <a href="#">adviser only</a> content.</p>
+        </div>
+      </aside>
       <div class="main-content">
         <main id="main" role="main" class="main-content__right">
           <div class="title">
-            <h1 class="title__heading js-ref"><span class="title__title">Content heading</span></h1>
+            <h1 class="title__heading js-ref"><span class="title__title">Legislation</span></h1>
           </div>
           <div class="title__subheading">This advice is for 
             <button id="showSimpleModal" type="button" class="btn btn-primary-outline btn-small">England</button><a href="javascript:emailCurrentPage()" data-track="Email page" class="a-social-email">Email</a><a href="javascript:window.print();" data-track="Print" class="a-social-print">Print</a><a href="#!" data-track="References" class="a-social-references">References</a><span class="info-extent">Extent</span><span class="info-reviewed">Reviewed</span><span class="info-owner">Owner</span>
@@ -53,21 +59,21 @@
             <p>Introduction is optional, but for a long format advice page it can be useful to summarise the pages content, this should be kept as a relatively short paragraph that covers what this page of content will do.</p>
             <section id="step1">
               <h2>First use of &lt;h2&gt; in content</h2>
-              <p>Lorem ipsum dolor sit amet, <span id="overlay_button-1">consectetuer</span> adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. <span id="overlay_button-1">Ut wisi enim ad minim veniam</span>, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step2">
               <h2>Second use of &lt;h2&gt; in content</h2>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat laoreet dolore magna aliquam erat volutpat. <span id="overlay_button-2">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span></p>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
             </section>
             <section id="step3">
               <h2>Third use of &lt;h2&gt; in content</h2>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
+              <p><span id="overlay_button-2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</span></p>
             </section>
           </div>
           <div id="overlay1" style="display:none;" class="overlay">
             <div class="overlay__modal">
               <div class="overlay__main">
-                <h3 class="overlay__header">19.1 Overlay title</h3>
+                <h3 class="overlay__header">Definition: Overlay title</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
@@ -80,7 +86,7 @@
           <div id="overlay2" style="display:none;" class="overlay">
             <div class="overlay__modal">
               <div class="overlay__main">
-                <h3 class="overlay__header">19.2 Overlay title</h3>
+                <h3 class="overlay__header">6.3 Overlay title</h3>
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
               </div>
               <div class="overlay__footer">
@@ -90,10 +96,10 @@
           </div>
           <script>
             $('#overlay_button-1').append(function() {
-            	return "<sup class='adviser'>19.1</sup>";
+            	return "<sup class='adviser'></sup>";
             })
             $('#overlay_button-2').append(function() {
-            	return "<sup class='adviser'>19.2</sup>";
+            	return "<sup class='adviser'>6.3</sup>";
             })
             
             
@@ -121,7 +127,7 @@
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Section title</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="#" title="Content page" class="-current">Content page</a>
+              <li class="side-nav-beta__sibling"><a href="adviser.html" title="Content page">Content page</a>
               </li>
             </ul>
           </ul>
@@ -130,7 +136,7 @@
           <ul>
             <li class="side-nav-beta__heading -active -open"><a><span>Adviser pages</span></a></li>
             <ul>
-              <li class="side-nav-beta__sibling"><a href="adviser-2.html">Legislation</a></li>
+              <li class="side-nav-beta__sibling -current"><a href="adviser-2.html">Legislation</a></li>
             </ul>
           </ul>
         </nav>
