--- a/public/colours.html
+++ b/public/colours.html
@@ -217,6 +217,28 @@
                 <p>Gray 8<br>@gray-8<br>#F2F2F2</p>
               </div>
             </div>
+            <div class="row">
+              <div class="span8">
+                <h3>Adviser colour palette</h3>
+                <p>Range of colours used for adviser only content.</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span3 swatch swatch--adviser--inventive-teal-light">
+                <p>Inventive Teal Light<br>@inventive-teal-light<br>#007792</p>
+              </div>
+              <div class="span3 swatch swatch--adviser--inventive-teal-lighter">
+                <p>Inventive Teal Lighter<br>@inventive-teal-lighter<br>#87C3D0</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="span3 swatch swatch--adviser-blue-gray">
+                <p>Adviser Blue Gray<br>@adviser-blue-gray<br>#ACAA9B</p>
+              </div>
+              <div class="span3 swatch swatch--adviser-stone">
+                <p>Adviser Stone<br>@adviser-stone<br>#5D7678</p>
+              </div>
+            </div>
           </div>
         </div>
         <section class="print-only">
